# ccprophet

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
docs/: ARCHITECT.md  DATAMODELING.md  DESIGN.md  LAYERING.md  PRD.md  README.en.md  README.ko.md  README.zh.md
docs/demo/: SCRIPT.md  SHOW_HN.md  SOCIAL_PREVIEW.md
migrations/: V1__init.sql  V2__auto_fix_outcome_cost.sql  V3__cache_tokens.sql  V4__subagent_summary.sql  V5__session_summary.sql
scripts/: install.bat  seed_demo_db.py  uninstall.bat
src/ccprophet/adapters/cli/: bloat.py  budget.py  claude_md.py  cost.py  diff.py  doctor.py  forecast.py  ingest.py  install.py  live.py  mark.py  mcp_scan.py  postmortem.py  prune.py  quality.py  quality_export.py  query.py  recommend.py  reproduce.py  rollup.py  savings.py  sessions.py  snapshot.py  statusline.py  subagents.py
src/ccprophet/adapters/clock/: system.py
src/ccprophet/adapters/filewatch/: jsonl_reader.py
src/ccprophet/adapters/forecast/: arima.py  linear.py
src/ccprophet/adapters/hook/: receiver.py
src/ccprophet/adapters/mcp/: server.py
src/ccprophet/adapters/mcp_scan/: cli_subprocess.py
src/ccprophet/adapters/persistence/duckdb/: _tz.py  hot_table_pruner.py  migrations.py  repositories.py  transaction.py  v2_repositories.py  v3_repositories.py  v5_repositories.py
src/ccprophet/adapters/persistence/inmemory/: hot_table_pruner.py  repositories.py
src/ccprophet/adapters/redaction/: sha256.py
src/ccprophet/adapters/settings/: jsonfile.py
src/ccprophet/adapters/snapshot/: filesystem.py
src/ccprophet/adapters/web/: app.py  pattern_diff_shaper.py  replay_shaper.py  shapers.py
src/ccprophet/domain/: entities.py  errors.py  values.py
src/ccprophet/domain/services/: auto_label.py  bloat.py  budget.py  claude_md_audit.py  cluster.py  cost.py  forecast.py  pattern_diff.py  phase.py  postmortem.py  quality.py  recommender.py  session_aggregator.py  settings_patch.py
src/ccprophet/harness/: cli_main.py  hook_main.py  mcp_main.py  web_main.py
src/ccprophet/harness/commands/: _shared.py  actions.py  actions_rollup.py  actions_snapshot.py  analysis.py  analysis_extra.py  info.py  ops.py  services.py
src/ccprophet/ports/: clock.py  forecast_model.py  hot_table_pruner.py  jsonl.py  logger.py  mcp_scan.py  outcomes.py  pricing.py  recommendations.py  redactor.py  repositories.py  session_summary.py  settings.py  snapshots.py  subagents.py  subset_profile.py
src/ccprophet/use_cases/: analyze_bloat.py  analyze_postmortem.py  apply_pruning.py  assess_quality.py  auto_label_sessions.py  backfill_from_jsonl.py  compute_monthly_cost.py  compute_savings.py  compute_session_cost.py  detect_phases.py  diff_sessions.py  estimate_budget.py  forecast_compact.py  ingest_event.py  list_recommendations.py  list_snapshots.py  list_subagents.py  mark_outcome.py  prune_tools.py  recommend_action.py  reproduce_session.py  restore_snapshot.py  rollup_sessions.py
src/ccprophet/web/: index.html  pattern_diff.js  replay.js
tests/: conftest.py
tests/contract/: test_event_repository_contract.py  test_forecast_repository_contract.py  test_outcome_repository_contract.py  test_phase_repository_contract.py  test_pricing_provider_contract.py  test_recommendation_repository_contract.py  test_session_repository_contract.py  test_session_summary_repository_contract.py  test_snapshot_repository_contract.py  test_subagent_repository_contract.py  test_subset_profile_contract.py
tests/fixtures/: builders.py
tests/integration/adapters/cli/: test_bloat_command.py  test_budget_command.py  test_claude_md_command.py  test_cost_command.py  test_diff_command.py  test_doctor_command.py  test_forecast_command.py  test_ingest_command.py  test_install_command.py  test_live_command.py  test_mark_command.py  test_mcp_scan_command.py  test_postmortem_command.py  test_prune_command.py  test_quality_command.py  test_quality_export.py  test_query_command.py  test_recommend_command.py  test_reproduce_command.py  test_rollup_command.py  test_savings_command.py  test_sessions_command.py  test_snapshot_command.py  test_snapshot_restore_command.py  test_statusline_command.py  test_subagents_command.py  test_uninstall_command.py
tests/integration/adapters/hook/: test_receiver.py
tests/integration/adapters/persistence/duckdb/: test_hot_table_pruner.py  (+3 more)
tests/integration/adapters/settings/: test_jsonfile_settings_store.py
tests/integration/adapters/snapshot/: test_filesystem_snapshot_store.py
tests/integration/adapters/web/: test_pattern_diff_endpoint.py  test_readonly_regression.py  test_replay_endpoint.py  test_web_app.py
tests/integration/use_cases/: test_assess_quality.py  test_auto_fix_flow.py  test_auto_label_sessions.py  test_backfill_from_jsonl.py  test_reproduce_session.py  test_session_optimizer_flow.py
tests/perf/: test_hook_latency.py
tests/property/: test_bloat_calculator_properties.py  test_phase_detector_properties.py
tests/unit/adapters/: test_arima_forecast.py  test_build_replay.py  test_cli_subprocess_mcp_lister.py  test_jsonl_reader.py  test_mcp_server.py
tests/unit/domain/: test_auto_label.py  test_bloat_calculator.py  test_claude_md_auditor.py  test_cluster.py  test_cost_calculator.py  test_linear_forecaster.py  test_pattern_diff.py  test_phase_detector.py  test_postmortem.py  test_quality.py  test_recommender.py  test_recommender_env_vars.py  test_session_aggregator.py  test_settings_patch_planner.py  test_values.py
tests/unit/use_cases/: test_analyze_bloat.py  test_compute_monthly_cost.py  test_compute_savings.py  test_compute_session_cost.py  test_detect_phases.py  test_diff_sessions.py  test_estimate_budget.py  test_forecast_compact.py  test_ingest_event.py  test_list_subagents.py  test_mark_outcome.py  test_recommend_action.py  test_recommend_action_env_vars.py  test_rollup_sessions.py
web/: index.html  pattern_diff.js
