[project]
name = "ccprophet"
version = "0.6.0"
description = "Local-first Context Efficiency Advisor for Claude Code — auto-fix bloat, reproduce best configs, tokens→USD, quality regression flag"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "ccprophet contributors" }]
keywords = [
    "claude-code", "claude", "anthropic", "context", "efficiency",
    "bloat", "profiler", "auto-fix", "cost", "duckdb", "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "duckdb>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
mcp = ["mcp>=1.0"]
forecast = ["statsmodels>=0.14"]

[project.scripts]
ccprophet = "ccprophet.harness.cli_main:main"
ccp = "ccprophet.harness.cli_main:main"  # short alias — same entrypoint
ccprophet-hook = "ccprophet.harness.hook_main:main"
ccprophet-mcp = "ccprophet.harness.mcp_main:main"

[project.urls]
Homepage = "https://github.com/showjihyun/ccprophet"
Repository = "https://github.com/showjihyun/ccprophet"
Issues = "https://github.com/showjihyun/ccprophet/issues"
Documentation = "https://github.com/showjihyun/ccprophet/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccprophet"]

[tool.hatch.build.targets.wheel.force-include]
# Migrations live at repo root (outside the package). Force-include under
# `ccprophet/_migrations/` so `MIGRATIONS_DIR = parents[3]/"_migrations"`
# resolves inside an installed wheel. Without this, `ccprophet doctor
# --migrate` silently finds zero files and the schema never initializes.
"migrations" = "ccprophet/_migrations"
# NOTE: src/ccprophet/web/ is already picked up by `packages = [src/ccprophet]`
# above — no separate force-include (would create duplicate-name warnings).

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "migrations/",
    "docs/",
    "web/",
    "README.md",
    "LICENSE",
    "CLAUDE.md",
    "AGENTS.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Project-wide ignores — each is a deliberate idiom:
# - B008: Typer commands use `typer.Argument(...)` / `typer.Option(...)` as
#   defaults; this is the library's documented API.
# - RUF001: We use Unicode arrows (→, Δ, ≈) in CLI output and rationale strings
#   on purpose. These aren't ambiguous for terminal readers.
ignore = ["B008", "RUF001"]

[tool.ruff.lint.per-file-ignores]
# CLI commands defer third-party imports (duckdb / rich / fastapi) into the
# function body to keep the hook cold-start fast (NFR-1). E402 flags this as
# "imports not at top of file", which is exactly the trade-off we want.
"src/ccprophet/harness/commands/*.py" = ["E402"]
"src/ccprophet/adapters/cli/*.py" = ["E402"]
# Tests occasionally benefit from multi-line fixtures that exceed 100 chars
# for readability (long URLs, wide data tables). We prioritise clarity over
# strict wrapping in test code.
"tests/**/*.py" = ["E501", "F841", "B007"]

[tool.ruff.lint.isort]
known-first-party = ["ccprophet"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["ccprophet"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "perf: performance benchmarks (deselect with -m 'not perf')",
]

[tool.coverage.run]
source = ["ccprophet"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.importlinter]
root_packages = ["ccprophet"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Clean Architecture layers"
type = "layers"
layers = [
    "ccprophet.harness",
    "ccprophet.adapters",
    "ccprophet.use_cases",
    "ccprophet.ports",
    "ccprophet.domain",
]

[[tool.importlinter.contracts]]
name = "Domain is framework-free"
type = "forbidden"
source_modules = ["ccprophet.domain"]
forbidden_modules = [
    "duckdb", "fastapi", "starlette", "typer", "click", "rich",
    "watchdog", "mcp", "statsmodels", "httpx", "requests",
]

[[tool.importlinter.contracts]]
name = "Use cases and ports are framework-free"
type = "forbidden"
source_modules = ["ccprophet.use_cases", "ccprophet.ports"]
forbidden_modules = [
    "duckdb", "fastapi", "starlette", "typer", "click", "rich",
    "watchdog", "mcp", "statsmodels", "httpx", "requests",
]

[[tool.importlinter.contracts]]
name = "Adapters do not import each other across families"
type = "independence"
modules = [
    "ccprophet.adapters.cli",
    "ccprophet.adapters.clock",
    "ccprophet.adapters.filewatch",
    "ccprophet.adapters.forecast",
    "ccprophet.adapters.hook",
    "ccprophet.adapters.logger",
    "ccprophet.adapters.mcp",
    "ccprophet.adapters.mcp_scan",
    "ccprophet.adapters.persistence",
    "ccprophet.adapters.redaction",
    "ccprophet.adapters.settings",
    "ccprophet.adapters.snapshot",
    "ccprophet.adapters.web",
]

[dependency-groups]
dev = [
    "hypothesis>=6.152.1",
    "pytest>=9.0.3",
    "httpx>=0.27",
    "import-linter>=2.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "pytest-cov>=5.0",
]
